<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.android2_1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android2_1.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android2_1.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/profile_profile"
        android:name="com.example.android2_1.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/form_fragment"
        android:name="com.example.android2_1.FormFragment"
        android:label="Form"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/boardFragment"
        android:name="com.example.android2_1.ui.board.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />

</navigation>